--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Backbone App</title>
-  <link rel="stylesheet" href="css/main.css">
-  <script data-main="" src="path/to/require.js"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <script data-main="js/main" src="js/libs/require.js"></script>
 </head>
 <body>
   <div id="main"></div>
