--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html>
 <head>
   <title>Backbone App</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/bootstrap.css" />
   <script data-main="js/main" src="js/libs/require.js"></script>
 </head>
 <body>
-  <div id="main"></div>
+	<header>
+	  <div class="container">
+	  	<h1>Backbone Videoclub</h1>
+	  	<p class="lead">Todas las peliculas en tu "localStorage" ;)</p>
+	  </div>
+	</header>
+	<hr />
+  <div class="container">
+    <div id="main" class="row"></div>
+  </div>
 </body>
 </html>
