--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<header>
 	  <div class="container">
 	  	<h1>Backbone Videoclub</h1>
-	  	<p class="lead">Todas las peliculas en tu "localStorage" ;)</p>
+	  	<p class="lead">Las peliculas que mas te gustan en tu "localStorage" ;)</p>
 	  </div>
 	</header>
 	<hr />
