--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 	<header>
-	  <div class="container">
-	  	<h1>Backbone Videoclub</h1>
-	  	<p class="lead">Las peliculas que mas te gustan en tu "localStorage" ;)</p>
-	  </div>
+  	<div class="logo">
+  		<img src="img/couch.png" />
+  	</div>
+  	<h1>Backbone Videoclub</h1>
+  	<p class="lead">Las peliculas que mas te gustan <span>en tu "localStorage"</span> ;)</p>
 	</header>
 	<hr />
   <div class="container">
