--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	</header>
 	<hr />
   <div class="container">
+    <div id="menu"></div>
     <div id="main" class="row"></div>
   </div>
 </body>
