--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script data-main="js/main" src="js/libs/require.js"></script>
 </head>
 <body>
-	<header>
+	<header class="top">
   	<div class="logo">
   		<img src="img/couch.png" />
   	</div>
@@ -16,8 +16,8 @@
 	</header>
 	<hr />
   <div class="container">
-    <div id="menu"></div>
-    <div id="main" class="row"></div>
+    <div class="menu"></div>
+    <div class="main" class="row"></div>
   </div>
 </body>
 	<script id="movie-form" type="text/x-handlebars-template">
