--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
   <script data-main="js/main" src="js/libs/require.js"></script>
 </head>
 <body>
-	<header class="top">
-  	<div class="logo">
-  		<img src="img/couch.png" />
-  	</div>
-  	<h1>Backbone Videoclub</h1>
-  	<p class="lead">Las peliculas que mas te gustan <span>en tu "localStorage"</span> ;)</p>
-	</header>
+	<header class="top"></header>
 	<hr />
   <div class="container">
     <div class="menu"></div>
