--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Backbone App</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/bootstrap.css" />
-  <script data-main="js/main" src="js/libs/require.js"></script>
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/bootstrap.css" />
+  <script data-main="/main" src="/libs/require.js"></script>
 </head>
 <body>
 	<header class="top"></header>
